cambios definitivos para todos.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ProyectoReto0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\2dam\\Documents\\NetBeansProjects\\Reto0DIN\\Reto0DIN\\src\\resources\\mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=src/recursos/mysql-connector-java-5.1.40-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
